added nav ul style rule with list-style-type: none, margin: 0, and padding: 0. added ul li style rule with float: left.

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,3 +124,13 @@ footer p {
 	color: white;
 	padding: 1em 0;
 }
+
+nav ul{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+ul li{
+	float: left;
+}
