added a li style rule with display: block, width: 20%, text-align: center, padding-top: 1em, padding-bottom: 1em, text-decoration: none, background-color: #800000, text color: white, and font-weight: bold. add .current style rule color: yellow.

--- a/styles/main.css
+++ b/styles/main.css
@@ -134,3 +134,19 @@ nav ul{
 ul li{
 	float: left;
 }
+
+a li{
+	display: block;
+	width: 20%;
+	text-align: center;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	text-decoration: none;
+	background-color: #800000;
+	color: white;
+	font-weight: bold;
+}
+
+.current{
+	color: yellow;
+}
