--- a/styles/main.css
+++ b/styles/main.css
@@ -125,19 +125,20 @@ footer p {
 	padding: 1em 0;
 }
 
-nav ul{
+#nav_menu ul{
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
 
-ul li{
+#nav_menu ul li{
 	float: left;
 }
 
-a li{
+#nav_menu ul li a{
 	display: block;
-	width: 20%;
+	width: 160px;
 	text-align: center;
 	padding-top: 1em;
 	padding-bottom: 1em;
@@ -147,6 +148,6 @@ a li{
 	font-weight: bold;
 }
 
-.current{
+#nav_menu .current{
 	color: yellow;
 }
