added #nav_menu ul ul li with float: none. added #nav_menu ul li:hover > ul with display: block. added #nav_menu ul ul with display: none, position: absolute, and top: 100%. added #nav_menu > ::after with content: "", clear: both, and display: block.

--- a/styles/main.css
+++ b/styles/main.css
@@ -155,3 +155,23 @@ footer p {
 #nav_menu{
 	position: relative;
 }
+
+#nav_menu ul ul {
+	display: none;
+	position: absolute;
+	top: 100%;
+}
+
+#nav_menu ul ul li{
+	float: none;
+}
+
+#nav_menu ul li:hover > ul {
+	display: block;
+}
+
+#nav_menu > ::after {
+	content: "";
+	clear: both;
+	display: block;
+}
